[project]
name = "nuclear"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.5",
    "lightgbm>=4.5.0",
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "tqdm>=4.67.1",
    "xgboost>=2.1.3",
]
